# formant

./: .gitignore  LICENSE  README.md  agent.proto  config.toml
docker/: BUILD.bazel  README.md  docker-compose.yaml  formant.env
docker/debian/: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  formant.env
docker/ros/: docker-compose.yaml  formant.env
docker/turtlebot/: Dockerfile  README.md
docker/turtlebot/scripts/: install.sh  run.sh
docker/usb-cam/: docker-compose.yaml  formant.env  usb_cam.env
docs/: README.md  agent-api-application-configuration.md  agent-api-events.md  agent-api-handle-commands.md  agent-api-ingesting-telemetry.md  agent-api.md  agent-debian-install.md  agent-docker-install.md  agent-faq-and-troubleshooting.md  client-ssh.sh  fctl-query.md  fctl-upload.md  fctl.md  python-using-protos.md  ssh-vpn.md  ssh.md  webhooks.md
docs/jq/: bucket_device.jq  bucket_hw.jq  bucket_tags.jq  filter.jq  math.jq
examples/: config.toml
examples/cpp/: .gitignore  CMakeLists.txt  README.md  formant_agent_client.cpp  formant_client_example.cpp  get_config_params.cpp  main.cc  receive_commands.cpp  send_bitset_datapoint.cpp  send_event.cpp  send_file_datapoint.cpp  send_gps_location_datapoint.cpp  send_image_datapoint.cpp  send_json_datapoint.cpp  send_localization_datapoint.cpp  send_numeric_datapoint.cpp  send_receive_custom_data_channel.cpp  send_receive_intervention_request.cpp  send_text_datapoint.cpp  teleop.cpp  teleop_heartbeat_callback.cpp
examples/cpp/protos/agent/v1/: agent.grpc.pb.cc  agent.grpc.pb.h  agent.pb.cc  agent.pb.h  agent_mock.grpc.pb.h
examples/cpp/protos/model/v1/: commands.grpc.pb.cc  commands.grpc.pb.h  commands.pb.cc  commands.pb.h  commands.proto  commands_mock.grpc.pb.h  config.grpc.pb.cc  config.grpc.pb.h  config.pb.cc  config.pb.h  config_mock.grpc.pb.h  datapoint.grpc.pb.cc  datapoint.grpc.pb.h  datapoint.pb.cc  datapoint.pb.h  datapoint_mock.grpc.pb.h  event.grpc.pb.cc  event.grpc.pb.h  event.pb.cc  event.pb.h  event_mock.grpc.pb.h  file.grpc.pb.cc  file.grpc.pb.h  file.pb.cc  file.pb.h  file.proto  file_mock.grpc.pb.h  health.grpc.pb.cc  health.grpc.pb.h  health.pb.cc  health.pb.h  health_mock.grpc.pb.h  intervention.grpc.pb.cc  intervention.grpc.pb.h  intervention.pb.cc  intervention.pb.h  intervention_mock.grpc.pb.h  math.grpc.pb.cc  math.grpc.pb.h  math.pb.cc  (+30 more)
examples/go/: README.md  main.go
examples/go/agent/: agent.pb.go
examples/python/: README.md  agent_pb2.py  agent_pb2_grpc.py  app_config.py  command_request.py  command_request_stream.py  event_grpc.py  event_http.py  intervention_grpc.py  intervention_http.py  main.py  requirements.txt  send_file.py  send_geolocation.py  send_image_grpc.py  send_json_grpc.py  send_json_http.py  send_localization_grpc.py  send_multi.py  send_numeric.py  send_text_grpc.py  send_text_http.py
examples/python/data/: map.json  planets.csv
examples/python/formant_module/: README.md  create_event.py  handle_commands.py  searchable_test_sesssions.py  send_basic_datapoints.py  send_image_datapoint.py  stream_usb_cam.py
examples/python/formant_module/agent/: README.md  charting_difference_numeric_numericset.py  command_create_file.py  create_event.py  custom_data_channels.py  get_app_config.py  handle_commands.py  handle_mouse_clicks.py  intervention.py  managing_throttling.py  position_cmd.py  post_device_authenticated_cloud_call.py  post_rtc_offer.py  requirements.txt  searchable_test_sesssions.py  send_basic_datapoints.py  send_image_datapoint.py  set_api_button_status.py  telemetry_listener.py  telemetry_listener_write_video_to_file.py  teleop.py  teleop_heartbeat_callback.py  twist_stamper.py
examples/python/formant_module/agent/JSON/: config_example.json  config_schema.json  example_data.json  json_reader.py
examples/python/formant_module/agent/adapter_with_config/: config.json  config_schema.json  main.py
examples/python/formant_module/cloud/: README.md  automate_adapter_module_deployment.py  commands.py  example.py  files.py  ingest.py  online.py  post_mission_annotations.py  query.py  query_annotations.py  query_devices.py  query_stream_latest.py
examples/python/formant_module/cloud/v2/: commands.py  files.py  ingest.py  online.py  post_mission_annotations.py  query.py  query_annotations.py  (+2 more)
examples/python/gprc_api/: app_config.py  commands_health_check.py  intervention_grpc.py  send_file.py  send_image_grpc.py  send_video_grpc.py
examples/python/grpc_api/: event_grpc.py  intervention_grpc.py  requirements.txt  send_file.py  send_geolocation.py  send_image_grpc.py  send_numericset_grpc.py  send_text_grpc.py
examples/python/grpc_api/protos/: build_python.sh  build_python_protoc_gen_swagger.sh
examples/python/http_api/: intervention_http.py  rtc_offer_http.py  send_joint_state.py  send_point_cloud_http.py
examples/ros/: README.md  main.launch
examples/ros/figure/: CMakeLists.txt  package.xml  requirements.txt  setup.py
examples/ros/figure/launch/: main.launch
examples/ros/figure/nodes/: bridge
examples/ros/figure/src/figure/: __init__.py  agent_pb2.py  agent_pb2_grpc.py  bridge_node.py
examples/ros/formant/: CMakeLists.txt  package.xml  setup.py
examples/ros/formant/launch/: main.launch
examples/ros/formant/nodes/: bridge
examples/ros/formant/src/formant/: agent_pb2.py  bridge_node.py
examples/typescript/: package.json  tsconfig.json
examples/typescript/src/: GrpcAgentClient.ts  HttpAgentClient.ts  index.ts
protos/agent/v1/: agent.proto
protos/model/v1/: commands.proto  config.proto  datapoint.proto  event.proto  file.proto  health.proto  intervention.proto  math.proto  media.proto  navigation.proto  ros.proto  rtc.proto  text.proto  views.proto
ros-bridge/: README.md  config.toml
ros-bridge/formant/: CMakeLists.txt  package.xml
ros-bridge/formant/src/formant/: bridge_node.py
ros-bridge/formant/src/protos/agent/v1/: agent_pb2_grpc.py
ros-bridge/formant/src/protos/model/v1/: file_pb2.py  media_pb2.py  navigation_pb2.py  ros_pb2.py
(+49 files in other folders)
