package(default_visibility = ["//visibility:public"])

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "tar",
    srcs = glob(
        include = [
            "**/*",
        ],
    ),
    extension = "tar.gz",
    mode = "0755",
    package_dir = "/docker",
    strip_prefix = "./",
    tags = [
        "release",
    ],
)
