<?xml version="1.0"?>
<package format="2">
  <name>formant</name>
  <version>0.9.26</version>
  <description>The Formant package</description>
  <maintainer email="support@formant.io">formant</maintainer>
  <license>All Rights Reserved</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>python-grpcio</build_depend>
  <build_depend>python-protobuf</build_depend>
  <build_depend>python-toml</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export></export>
</package>
