<?xml version="1.0"?>
<package format="2">
  <name>figure</name>
  <version>0.2.2</version>
  <description>The Figure package</description>
  <maintainer email="support@figure.works">Figure</maintainer>
  <license>All Rights Reserved</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-grpcio</build_depend>
  <build_depend>python-protobuf</build_depend>
  <build_depend>python-toml</build_depend>
  <export></export>
</package>
