<?xml version="1.0"?>
<package format="2">
  <name>formant</name>
  <version>0.3.17</version>
  <description>The Formant package</description>
  <maintainer email="support@formant.io">formant</maintainer>
  <license>All Rights Reserved</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-grpcio</build_depend>
  <build_depend>python-protobuf</build_depend>
  <build_depend>python-toml</build_depend>
  <export></export>
</package>
